# PhysicsEffects

./: CMakeLists.txt  README_Android.txt
Demos/: CMakeLists.txt
Demos/BasicDemo/: BasicDemo.h  CMakeLists.txt
Demos/BulletPhysicsEffects/: CMakeLists.txt  PfxBackendDemo.h
Demos/OpenGL/: CMakeLists.txt  DemoApplication.cpp  DemoApplication.h  GLDebugDrawer.cpp  GLDebugFont.cpp  GlutStuff.cpp  GlutStuff.h  RenderTexture.cpp  Win32AppMain.cpp
Physics/Base/: PerfCounter.h  PfxAABB16.h  PfxFileIO.h  SimdFunc.h  SortCommon.h  VecInt3.h
Physics/RayCast/: RayCast.cpp
Physics/RayCast/common/: Ray.h  RayCastConfig.h  RayIntersect.cpp  RayIntersectHeightField.cpp  RayIntersectHeightField.h
Physics/RigidBody/: CMakeLists.txt
Physics/RigidBody/common/: CMakeLists.txt  Capsule.h  CollPrim.h  ConstraintRowSolver.h  Contact.h  Forces.h  HeightField.h  HeightFieldFunction.cpp  HeightFieldFunction.h  ParallelGroup.h  PfxContactCache.cpp  PfxGJKSolver.cpp  PfxGJKSolver.h  PfxGJKSupportFunc.cpp  PfxSimplexSolver.h  RigidBodyConfig.h  Spring.h  TrbDynBody.h  TrbStateVec.h  WorldVolume.h  boxBoxDistance.cpp  boxCapsuleDistance.h  boxSphereDistance.cpp  boxSphereDistance.h  capsuleCapsuleDistance.cpp  capsuleCapsuleDistance.h  closestContact.cpp  closestContactConvex.cpp  collidableTable.h  contactHeightField.h  convexCapsuleDistance.cpp  convexConvexDistance.cpp  intersectFunction.h  sphereSphereDistance.h  trianglesBoxContacts.cpp  trianglesBoxContacts.h  trianglesSphereContacts.cpp
Physics/Sort/: Quicksort.ppu.h
Plugins/PfxCommonFormat/: CMakeLists.txt  PfxCommonFileIO.h  PfxCommonFormat.h  PfxCommonImport.cpp  PfxCommonTypes.h
Plugins/PfxViewer/: Form1.h  Form1.resx  PfxViewer.cpp  ReadMe.txt  WorldPropertyDlg.resx  app.aps  stdafx.cpp
Plugins/PfxViewer/App/: CommonApp.h  Loader.cpp  PfxApp.h
Plugins/PfxViewer/Render/: GLFont.cpp  GLFont.h  GLRender.cpp  GLRender.h  RenderUtil.h
Plugins/Sample/: TestScene1.mb  TestScene2.mb
Util/: MeshUtil.cpp  PfxConvexCreater.cpp
branches/PhysicsEffects/: CMakeLists.txt
branches/PhysicsEffects/Demos/BasicDemo/: BasicDemo.cpp
branches/PhysicsEffects/Demos/BulletPhysicsEffects/: CMakeLists.txt  PfxBackendDemo.cpp  PfxBackendDemo.h  btPhysicsEffectsWorld.cpp  btPhysicsEffectsWorld.h
branches/PhysicsEffects/Demos/OpenGL/: GL_ShapeDrawer.cpp  GlutDemoApplication.cpp  RenderTexture.h  Win32AppMain.cpp
branches/PhysicsEffects/Physics/Base/: HeapManager.h  PhysicsCommon.h  SimpleStack.h  TestAABB.h
branches/PhysicsEffects/Physics/RayCast/: CMakeLists.txt  RayCast.h
branches/PhysicsEffects/Physics/RayCast/common/: CMakeLists.txt  RayCastIO.h  RayIntersect.h
branches/PhysicsEffects/Physics/RigidBody/: Mass.cpp  Mass.h  RigidBodies.cpp  RigidBodies.h  RigidBodiesPPU.cpp  Snapshot.cpp
branches/PhysicsEffects/Physics/RigidBody/common/: Box.h  CollObject.cpp  CollObject.h  ConstraintCache.h  Contact.cpp  HeightField.cpp  Joint.h  PfxContactCache.h  PfxGJKSupportFunc.h  PfxSimplexSolver.cpp  RigidBodyIO.h  Sphere.h  SubData.h  TriMesh.h  boxBoxDistance.h  boxCapsuleDistance.cpp  capsuleSphereDistance.cpp  capsuleSphereDistance.h  closestContact.h  closestContactHeightField.cpp  closestContactLargeMesh.cpp  contactHeightField.cpp  contactSolver.cpp  contactSolver.h  convexBoxDistance.cpp  convexBoxDistance.h  convexCapsuleDistance.h  convexConvexDistance.h  convexSphereDistance.cpp  convexSphereDistance.h  jointSolver.cpp  jointSolver.h  sat_mesh_utils.h  solverFuncTable.h  trianglesCapsuleContacts.cpp  trianglesCapsuleContacts.h  trianglesConvexContacts.cpp  trianglesConvexContacts.h  vec_utils.h  (+1 more)
branches/PhysicsEffects/Plugins/PfxCommonFormat/: PfxCommonExport.cpp  PfxCommonExport.h  PfxCommonFileIO.cpp  PfxCommonFormat.cpp  PfxCommonImport.h
branches/PhysicsEffects/Plugins/PfxViewer/: AssemblyInfo.cpp  PfxViewer.sln  PfxViewer.vcproj  WorldPropertyDlg.cpp  WorldPropertyDlg.h  app.rc  resource.h  stdafx.h
branches/PhysicsEffects/Plugins/Sample/: TestScene1.txt  TestScene2.txt
branches/PhysicsEffects/Tutorials/HelloWorld/: CMakeLists.txt  main.cpp
branches/PhysicsEffects/Util/: MeshUtil.h  PfxConvexCreater.h  UtilCommon.h
branches/PhysicsEffects/include/BulletPhysicsEffects/: btBulletPhysicsEffectsWorld.h  btLowLevelBroadphase.cpp  btLowLevelBroadphase.h  btLowLevelConstraintSolver2.cpp  btLowLevelData.h
branches/PhysicsEffects/include/vecmath/: vmInclude.h
branches/PhysicsEffects/msvc/9/: PHYSICS_EFFECTS.sln
branches/PhysicsEffects/sample/api_physics_effects/: CMakeLists.txt  api_physics_effects.windows.sln
branches/PhysicsEffects/src/: CMakeLists.txt  btpe_compatibility.patch
branches/PhysicsEffects/src/low_level/: CMakeLists.txt
branches/PhysicsEffects/src/util/: CMakeLists.txt  pfx_util_common.h
include/BulletPhysicsEffects/: btBulletPhysicsEffectsWorld.cpp
include/physics_effects/base_level/base/: pfx_common.h  pfx_vectormath_include.h
include/physics_effects/low_level/: pfx_low_level_include.h
msvc/9/Demos/BasicDemo/: AppBasicDemo.vcproj
msvc/9/Demos/OpenGL/: OpenGLSupport.vcproj
msvc/9/Plugins/PfxCommonFormat/: PfxCommonFormat.vcproj
msvc/9/src/BulletCollision/: BulletCollision.vcproj
msvc/9/src/BulletMultiThreaded/: BulletMultiThreaded.vcproj
msvc/9/src/BulletSoftBody/: BulletSoftBody.vcproj
msvc/9/src/LinearMath/: LinearMath.vcproj
sample/api_physics_effects/: CMakeLists.txt
sample/api_physics_effects/0_console/: CMakeLists.txt
sample/api_physics_effects/2_stable/: CMakeLists.txt  main.cpp
sample/api_physics_effects/3_sleep/: CMakeLists.txt  main.cpp
sample/api_physics_effects/5_raycast/: CMakeLists.txt
sample/api_physics_effects/6_joint/: CMakeLists.txt  main.cpp
sample/api_physics_effects/99_bullet_highlevel/: CMakeLists.txt  barrel.h  bullet_physics_func.cpp  landscape.h  main.cpp  physics_func.h
src/: CMakeLists.txt
src/base_level/: CMakeLists.txt
src/base_level/solver/: pfx_contact_constraint.cpp  pfx_joint_ball.cpp
src/low_level/: CMakeLists.txt
(+27 files in other folders)
